<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rock Paper Scissors</string>
    <string name="action_settings">Settings</string>
    <string name="game_name">Want to play Rock Paper Scissors ?</string>
    <string name="edit_name">Enter Username</string>
    <string name="edit_age">Enter Age</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="button_submit">Start Game</string>
    <string name="button_display">Get DB data</string>
    <string name="button_exit">Exit</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="player"></string>
    <string name="button_scissors">Scissors</string>
    <string name="button_rock">Rock</string>
    <string name="button_paper">Paper</string>
    <string name="welcomeString">Welcome! \n Rock ---> Single Tap \n Paper ---> Double tap \n Scissor ---> Swipe </string>
    <string name="swipeHere">Touch Here ---></string>
    <string name="wins"></string>
    <string name="loss"></string>
    <string name="draws"></string>

</resources>
